--- a/multi/roles/istio-multi/tasks/main.yml
+++ b/multi/roles/istio-multi/tasks/main.yml
@@ -44,16 +44,10 @@
     step certificate create cluster2.intermediate.istio.io {{ home_dir_path.stdout }}/certs/cluster2/ca-cert.pem {{ home_dir_path.stdout }}/certs/cluster2/ca-key.pem --ca {{ home_dir_path.stdout }}/certs/root-cert.pem --ca-key {{ home_dir_path.stdout }}/certs/root-ca.key --profile intermediate-ca --not-after 87600h --no-password --insecure --san cluster2.intermediate.istio.io --kty RSA
     cat {{ home_dir_path.stdout }}/certs/cluster2/ca-cert.pem {{ home_dir_path.stdout }}/certs/root-cert.pem > {{ home_dir_path.stdout }}/certs/cluster2/cert-chain.pem
 
-- name: Status result
-  become: false
-  shell: |
-    echo $(kubectl --context=cluster2 get pods -A | grep -v Running | grep -v Completed | awk 'NR == 2 {print $2}')
-  register: cluster2_status
-
 - name: Check cluster2 pods status
   become: false
   shell: |
-    while [ ! -z {{ cluster2_status.stdout }} ]; do sleep 10; done
+    while [ ! -z $(kubectl --context=cluster2 get pods -A | grep -v Running | grep -v Completed | awk 'NR == 2 {print $2}') ]; do sleep 10; done
 
 - name: Create CA certs secret (cluster1)
   become: false
