--- a/single/roles/istio/tasks/main.yml
+++ b/single/roles/istio/tasks/main.yml
@@ -4,21 +4,8 @@
   shell: "echo $HOME"
   register: home_dir_path
 
-- name: Check istioctl installation
-  become: false
-  shell: ls | grep {{home_dir_path.stdout }}/istio-1.16.0
-  register: istio_dir
-  ignore_errors: true
-
-- name: Download istioctl
-  become: false
-  shell: |
-    cd {{ home_dir_path.stdout }}
-    curl -L https://istio.io/downloadIstio | ISTIO_VERSION=1.16.0 TARGET_ARCH=x86_64 sh -
-  when: istio_dir.stdout == ""
-
 - name: Copy istioctl
   copy:
-    src: "{{ home_dir_path.stdout }}/istio-1.16.0/bin/istioctl"
+    src: "{{ home_dir_path.stdout }}/cp-deployment/applications/istio-1.19.0/bin/istioctl"
     dest: "/usr/bin/istioctl"
     mode: "0755"
