Modify istio script

--- a/standalone/inventory/mycluster/group_vars/k8s_cluster/addons.yml
+++ b/standalone/inventory/mycluster/group_vars/k8s_cluster/addons.yml
@@ -208,6 +208,10 @@ metallb_config:
       ip_range:
         - {METALLB_IP_RANGE}
       auto_assign: true
+    ingress_nginx:
+      ip_range:
+        - {INGRESS_NGINX_PRIVATE_IP}/32
+      auto_assign: false
 #     pool1:
 #       ip_range:
 #         - 10.6.0.0/16
@@ -218,6 +222,7 @@ metallb_config:
 #       auto_assign: true
   layer2:
     - primary
+    - ingress_nginx
 #   layer3:
 #     defaults:
 #       peer_port: 179
