--- a/multi/roles/cp-setting/tasks/main.yml
+++ b/multi/roles/cp-setting/tasks/main.yml
@@ -10,6 +10,22 @@
     src: "{{ home_dir_path.stdout }}/cp-deployment/multi/cp-cluster-vars{{ groups['kube_control_plane'].index(inventory_hostname)|int + 1|int }}.sh"
     dest: "{{ home_dir_path.stdout }}/cp-deployment/standalone/cp-cluster-vars.sh"
 
+- name: Copy vars file (cluster1)
+  become: false
+  copy:
+    src: "{{ home_dir_path.stdout }}/cp-deployment/multi/cp-cluster-vars2.sh"
+    dest: "{{ home_dir_path.stdout }}/cp-deployment/standalone/cp-cluster-vars-tmp.sh"
+  when:
+    - inventory_hostname == groups['kube_control_plane'][0]
+
+- name: Copy vars file (cluster2)
+  become: false
+  copy:
+    src: "{{ home_dir_path.stdout }}/cp-deployment/multi/cp-cluster-vars1.sh"
+    dest: "{{ home_dir_path.stdout }}/cp-deployment/standalone/cp-cluster-vars1-tmp.sh"
+  when:
+    - inventory_hostname == groups['kube_control_plane'][1]
+
 - name: Copy key file
   become: false
   copy:
