--- a/multi/roles/istio-multi/tasks/main.yml
+++ b/multi/roles/istio-multi/tasks/main.yml
@@ -55,7 +55,7 @@
     kubectl --context=cluster1 create ns istio-system
     kubectl --context=cluster2 create ns istio-system
 
- name: Create CA certs secret (cluster1)
+- name: Create CA certs secret (cluster1)
   become: false
   shell: kubectl --context=cluster1 create secret generic cacerts -n istio-system --from-file={{ home_dir_path.stdout }}/certs/cluster1/ca-cert.pem --from-file={{ home_dir_path.stdout }}/certs/cluster1/ca-key.pem --from-file={{ home_dir_path.stdout }}/certs/root-cert.pem --from-file={{ home_dir_path.stdout }}/certs/cluster1/cert-chain.pem
 
