--- a/multi/roles/istio-multi/tasks/main.yml
+++ b/multi/roles/istio-multi/tasks/main.yml
@@ -66,8 +66,26 @@
 - name: Install istio (cluster1, cluster2)
   become: false
   shell: |
-    istioctl install --context=cluster1 -f cluster1.yaml
-    istioctl install --context=cluster2 -f cluster2.yaml
+    istioctl install -y --context=cluster1 -f - <<EOF
+    kind: IstioOperator
+    spec:
+      values:
+        global:
+          meshID: mesh1
+          multiCluster:
+            clusterName: cluster1
+          network: network1
+    EOf
+    istioctl install -y --context=cluster2 -f - <<EOF
+    kind: IstioOperator
+    spec:
+      values:
+        global:
+          meshID: mesh1
+          multiCluster:
+            clusterName: cluster2
+          network: network2
+    EOf
 
 - name: Set label istio-system (cluster1, cluster2)
   become: false
@@ -78,17 +96,27 @@
 - name: Install istio eastwestgateway (cluster1, cluster2)
   become: false
   shell: |
-    {{ home_dir_path.stdout }}/applications/istio-1.19.0/samples/multicluster/gen-eastwest-gateway.sh --mesh mesh1 --cluster cluster1 --network network1 | istioctl --context=cluster1 install -y -f -
-    {{ home_dir_path.stdout }}/applications/istio-1.19.0/samples/multicluster/gen-eastwest-gateway.sh --mesh mesh1 --cluster cluster2 --network network2 | istioctl --context=cluster2 install -y -f -
+    {{ home_dir_path.stdout }}/cp-deployment/applications/istio-1.19.0/samples/multicluster/gen-eastwest-gateway.sh --mesh mesh1 --cluster cluster1 --network network1 | istioctl --context=cluster1 install -y -f -
+    {{ home_dir_path.stdout }}/cp-deployment/applications/istio-1.19.0/samples/multicluster/gen-eastwest-gateway.sh --mesh mesh1 --cluster cluster2 --network network2 | istioctl --context=cluster2 install -y -f -
 
 - name: Expose service (cluster1, cluster2)
   become: false
   shell: |
-    kubectl --context=cluster1 apply -f {{ home_dir_path.stdout }}/applications/istio-1.19.0/samples/multicluster/expose-services.yaml -n istio-system
-    kubectl --context=cluster2 apply -f {{ home_dir_path.stdout }}/applications/istio-1.19.0/samples/multicluster/expose-services.yaml -n istio-system
+    kubectl --context=cluster1 apply -f {{ home_dir_path.stdout }}/cp-deployment/applications/istio-1.19.0/samples/multicluster/expose-services.yaml -n istio-system
+    kubectl --context=cluster2 apply -f {{ home_dir_path.stdout }}/cp-deployment/applications/istio-1.19.0/samples/multicluster/expose-services.yaml -n istio-system
 
-- name: Enable endpoint discovery (cluster1, cluster20
+- name: Enable endpoint discovery (cluster1, cluster2)
   become: false
   shell: |
     istioctl create-remote-secret --name=cluster2 --context=cluster2 | kubectl --context=cluster1 apply -f -
     istioctl create-remote-secret --name=cluster1 --context=cluster1 | kubectl --context=cluster2 apply -f -
+
+- name: Patch loadbalancer svc external ip (cluster1, cluster2)
+  become: false
+  shell: |
+    kubectl --context=cluster1 patch svc ingress-nginx-controller -p '{"spec":{"loadBalancerIP":"{{ cluster1_ingress_nginx_private_ip }}"}}' -n ingress-nginx
+    kubectl --context=cluster1 patch svc istio-ingressgateway -p '{"spec":{"loadBalancerIP":"{{ cluster1_istio_ingress_private_ip }}"}}' -n ingress-nginx
+    kubectl --context=cluster1 patch svc istio-eastwestgateway -p '{"spec":{"loadBalancerIP":"{{ cluster1_istio_eastwest_private_ip }}"}}' -n ingress-nginx
+    kubectl --context=cluster2 patch svc ingress-nginx-controller -p '{"spec":{"loadBalancerIP":"{{ cluster1_ingress_nginx_private_ip }}"}}' -n ingress-nginx
+    kubectl --context=cluster2 patch svc istio-ingressgateway -p '{"spec":{"loadBalancerIP":"{{ cluster1_istio_ingress_private_ip }}"}}' -n ingress-nginx
+    kubectl --context=cluster2 patch svc istio-eastwestgateway -p '{"spec":{"loadBalancerIP":"{{ cluster1_istio_eastwest_private_ip }}"}}' -n ingress-nginx
