--- a/single/roles/istio-single/tasks/main.yml
+++ b/single/roles/istio-single/tasks/main.yml
@@ -3,3 +3,4 @@
   become: false
   shell: |
     kubectl patch svc ingress-nginx-controller -p '{"spec":{"loadBalancerIP":"{{ ingress_nginx_private_ip }}"}}' -n ingress-nginx
+  ignore_errors: yes
