--- a/single/roles/kubeconfig/tasks/main.yml
+++ b/single/roles/kubeconfig/tasks/main.yml
@@ -40,5 +40,5 @@
   become: false
   fetch:
     src: "{{ home_dir_path.stdout }}/.kube/kubeconfig"
-    dest: "{{ home_dir_path.stdout }}/.kube/config"
+    dest: "{{ lookup('env', 'HOME') }}/.kube/config"
     flat: yes
