--- a/single/roles/cp-setting/tasks/main.yml
+++ b/single/roles/cp-setting/tasks/main.yml
@@ -7,13 +7,13 @@
 - name: Copy vars file
   become: false
   copy:
-    src: "{{ home_dir_path.stdout }}/cp-deployment/single/cp-cluster-vars.sh"
+    src: "{{ lookup('env', 'HOME') }}/cp-deployment/single/cp-cluster-vars.sh"
     dest: "{{ home_dir_path.stdout }}/cp-deployment/standalone/cp-cluster-vars.sh"
 
 - name: Copy key file
   become: false
   copy:
-    src: "{{ home_dir_path.stdout }}/.ssh/id_rsa"
+    src: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa"
     dest: "{{ home_dir_path.stdout }}/.ssh/id_rsa"
 
 - name: Chmod key file
