--- a/standalone/playbooks/cluster_multi.yml
+++ b/standalone/playbooks/cluster_multi.yml
@@ -170,7 +170,7 @@
   environment: "{{ proxy_disable_env }}"
   roles:
     - { role: kubespray-defaults }
-    - { role: cp/terraform }
+    - { role: cp/opentofu }
 
 - hosts: kube_control_plane
   gather_facts: False
