--- a/standalone/playbooks/cluster_terraman.yml
+++ b/standalone/playbooks/cluster_terraman.yml
@@ -140,6 +140,14 @@
     - { role: kubespray-defaults }
     - { role: cp/kube_config }
 
+- hosts: kube_control_plane
+  gather_facts: False
+  any_errors_fatal: "{{ any_errors_fatal | default(true) }}"
+  environment: "{{ proxy_disable_env }}"
+  roles:
+    - { role: kubespray-defaults }
+    - { role: cp/csr }
+
 - hosts: k8s_cluster
   gather_facts: False
   any_errors_fatal: "{{ any_errors_fatal | default(true) }}"
